apply plugin: 'java'

sourceCompatibility = 10
targetCompatibility = 10

repositories {
    jcenter()
}

dependencies {
    compile 'org.glassfish.jersey.core:jersey-client:2.27'
    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.27'
    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.27'

    compile 'junit:junit:4.12'
    compile 'org.hamcrest:hamcrest-all:1.3'

    compileOnly('org.projectlombok:lombok:1.18.0')
    annotationProcessor 'org.projectlombok:lombok:1.18.0'
}

tasks.withType(JavaExec) {
    jvmArgs += ["--add-modules", "java.xml.bind"]
}

task runTest(type: JavaExec) {
    main = 'util.Runner'
    if (project.hasProperty("tag")) {
        args tag
    }

    classpath = sourceSets.main.runtimeClasspath
}
